<resources>
    <string name="app_name">CashRegister-AS2</string>
    <string name="textview">TextView</string>
    <string name="product_name">Product Name</string>
    <string name="manager">Manager</string>
    <string name="total">Total</string>
    <string name="quantity">Quantity</string>
    <string name="buy">Buy</string>
    <string name="history">History</string>
    <string name="restock">Restock</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="enter_new_quantity">Enter new Quantity</string>
</resources>