<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Restock">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidline_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidline_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <EditText
        android:id="@+id/new_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:hint="@string/enter_new_quantity"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ok_btn"
        android:layout_width="137dp"
        android:layout_height="45dp"
        android:text="@string/ok"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guidline_5"
        app:layout_constraintDimensionRatio="w,3:1"
        app:layout_constraintEnd_toStartOf="@id/guidline_6"
        app:layout_constraintTop_toBottomOf="@id/new_qty" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="132dp"
        android:layout_height="46dp"
        android:text="@string/cancel"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/guidline_5"
        app:layout_constraintDimensionRatio="w,3:1"
        app:layout_constraintStart_toStartOf="@id/guidline_6"
        app:layout_constraintTop_toBottomOf="@id/new_qty" />

    <ListView
        android:id="@+id/stock"
        android:layout_width="405dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidline_5" />

</androidx.constraintlayout.widget.ConstraintLayout>